- not showing scores on the scoreboard when game is 0x0 - fixing input field size

--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,9 @@ input[type=text] {
   -moz-border-radius: 1px;
   -webkit-border-radius: 1px;
   padding: 2px 5px;
-  width: 110px;
+  width: 122px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 input[type=text]:hover {
